Correcting the menu and start the Home Page.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,12 @@
-<button class="btn btn-success">Teste</button>
+<div class="mt-2">
+  <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+      Menu Dropdown
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Opção 1</a></li>
+      <li><a class="dropdown-item" href="#">Opção 2</a></li>
+      <li><a class="dropdown-item" href="#">Opção 3</a></li>
+    </ul>
+  </div>
+</div>
