--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -23,7 +23,6 @@
       </li>
 
       <li class="nav-item dropdown">
-
         <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
           <i class="bi bi-bell"></i>
           <span class="badge bg-primary badge-number">4</span>
@@ -38,7 +37,7 @@
             <hr class="dropdown-divider">
           </li>
 
-          <li class="notification-item">
+          <li class="dropdown-item">
             <i class="bi bi-exclamation-circle text-warning"></i>
             <div>
               <h4>Lorem Ipsum</h4>
@@ -51,7 +50,7 @@
             <hr class="dropdown-divider">
           </li>
 
-          <li class="notification-item">
+          <li class="dropdown-item">
             <i class="bi bi-x-circle text-danger"></i>
             <div>
               <h4>Atque rerum nesciunt</h4>
@@ -64,7 +63,7 @@
             <hr class="dropdown-divider">
           </li>
 
-          <li class="notification-item">
+          <li class="dropdown-item">
             <i class="bi bi-check-circle text-success"></i>
             <div>
               <h4>Sit rerum fuga</h4>
@@ -77,7 +76,7 @@
             <hr class="dropdown-divider">
           </li>
 
-          <li class="notification-item">
+          <li class="dropdown-item">
             <i class="bi bi-info-circle text-primary"></i>
             <div>
               <h4>Dicta reprehenderit</h4>
@@ -166,7 +165,7 @@
       <li class="nav-item dropdown pe-3">
 
         <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-          <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+          <img src="<%= image_path('profile-img.jpg') %>" alt="Profile" class="rounded-circle">
           <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
         </a>
 
