--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,3 +10,7 @@
     </ul>
   </div>
 </div>
+
+<!--<div data-controller="chart">-->
+<!--  <div data-chart-target="chart"></div>-->
+<!--</div>-->
