--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,6 @@
   </div>
 </div>
 
-<!--<div data-controller="chart">-->
-<!--  <div data-chart-target="chart"></div>-->
-<!--</div>-->
+<div data-controller="chart">
+  <div data-chart-target="chart"></div>
+</div>
