Cruds started and OK.

--- a/app/views/layouts/_aside_menu.html.erb
+++ b/app/views/layouts/_aside_menu.html.erb
@@ -1,7 +1,7 @@
 <aside id="sidebar" class="sidebar">
   <ul class="sidebar-nav" id="sidebar-nav">
     <li class="nav-item">
-      <a class="nav-link " href="/home">
+      <a class="nav-link " href="<%= root_path %>">
         <i class="bi bi-grid"></i>
         <span>Início</span>
       </a>
@@ -22,7 +22,7 @@
           </a>
         </li>
         <li>
-          <a href="components-badges.html">
+          <a href="<%= new_culture_path %>">
             <i class="bi bi-circle"></i><span>PCP</span>
           </a>
         </li>
