--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -1,6 +1,6 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
   <div class="d-flex align-items-center justify-content-between">
-    <a href="#" class="logo d-flex align-items-center">
+    <a href="<%= root_path %>" class="logo d-flex align-items-center">
       <img src="<%= image_path('logo.png') %>" alt="DevParana">
       <span class="d-none d-lg-block">DevParaná</span>
     </a>
