--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,15 @@
 <div class="mt-2">
-  <div class="dropdown">
-    <button class="btn btn-outline-dark dropdown-toggle" type="button" data-bs-toggle="dropdown">
-      Reator
-    </button>
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="#">Reator 1</a></li>
-      <li><a class="dropdown-item" href="#">Reator 2</a></li>
-      <li><a class="dropdown-item" href="#">Reator 3</a></li>
-    </ul>
-  </div>
+  <%= form_with(url: home_index_path, method: :get, data: { turbo_stream: true, controller: 'auto-submit' }, class: 'col-4') do |f| %>
+    <%= f.select :reactor,
+                 options_for_select(@reactors.collect { |reactor| [ reactor.name, reactor.id ] },params[:reactor]),
+                 {},
+                 class: 'form-select',
+                 data: { action: 'auto-submit#submit' }
+    %>
+  <% end %>
 </div>
+
+
 
 <div class="mt-3">
   <div class="row">
@@ -130,5 +130,8 @@
 <h3 class="text-center mt-3">Análise da bactéria <i><%= 'Bacillus' %></i></h3>
 
 <div class="w-100" data-controller="chart">
+  <input type="hidden" data-chart-target="time" value="<%= @culture_logs_times %>">
+  <input type="hidden" data-chart-target="temperature" value="<%= @culture_logs_temperature %>">
+
   <div data-chart-target="chart"></div>
 </div>
