--- a/app/views/home/_home_screen.html.erb
+++ b/app/views/home/_home_screen.html.erb
@@ -68,7 +68,6 @@
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
 
@@ -79,7 +78,7 @@
 
                 <div class="d-flex align-items-center justify-content-center">
                   <div class="ps-3">
-                    <h6 style="font-size: 36px;"><%= @last_culture_log&.oxygen %> qO2</h6>
+                    <h6 style="font-size: 36px;"><%= @last_culture_log&.oxygen %> qO<sub>2</sub></h6>
                   </div>
                 </div>
               </div>
