--- a/app/views/image_repositories/index.html.erb
+++ b/app/views/image_repositories/index.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-2">
-  <%= form_with(url: home_index_path, method: :get, data: { turbo_stream: true, controller: 'auto-submit' }, class: 'col-4') do |f| %>
+  <%= form_with(url: image_repositories_path, method: :get, data: { turbo_stream: true, controller: 'auto-submit' }, class: 'col-4') do |f| %>
     <%= f.select :reactor,
                  options_for_select(@reactors.collect { |reactor| [ reactor.name, reactor.id ] }, params[:reactor]),
                  {},
@@ -9,6 +9,6 @@
   <% end %>
 </div>
 
-<div id="home-screen">
-  <%= render 'home_screen' %>
+<div id="image-container">
+    <%= render 'image_items', reactor: @reactor %>
 </div>
