--- a/app/views/layouts/_aside_menu.html.erb
+++ b/app/views/layouts/_aside_menu.html.erb
@@ -1,7 +1,7 @@
 <aside id="sidebar" class="sidebar">
   <ul class="sidebar-nav" id="sidebar-nav">
     <li class="nav-item">
-      <a class="nav-link " href="<%= root_path %>">
+      <a class="nav-link" href="<%= root_path %>">
         <i class="bi bi-grid"></i>
         <span>Início</span>
       </a>
@@ -27,6 +27,12 @@
           </a>
         </li>
       </ul>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="<%= image_repositories_path %>">
+        <i class="bi bi-grid"></i>
+        <span>Imagens</span>
+      </a>
     </li>
   </ul>
 </aside>
