--- a/app/views/home/_home_screen.html.erb
+++ b/app/views/home/_home_screen.html.erb
@@ -64,7 +64,7 @@
 
                 <div class="d-flex align-items-center justify-content-center">
                   <div class="ps-3">
-                    <h6 style="font-size: 36px;"><%= @last_culture_log&.pressure %> KPa</h6>
+                    <h6 style="font-size: 36px;"><%= @last_culture_log&.pressure %> Bar</h6>
                   </div>
                 </div>
               </div>
@@ -78,7 +78,7 @@
 
                 <div class="d-flex align-items-center justify-content-center">
                   <div class="ps-3">
-                    <h6 style="font-size: 36px;"><%= @last_culture_log&.oxygen %> qO<sub>2</sub></h6>
+                    <h6 style="font-size: 36px;"><%= @last_culture_log&.oxygen %> mg/L</h6>
                   </div>
                 </div>
               </div>
